llvm-toolchain-snapshot (1:3.7~svn229332-1~exp1) experimental; urgency=medium

  * New snapshot release
  * Support of gcc 5.0 (Closes: #777988)
  * compiler-rt-i586.diff: fix a build issue of compiler-rt under i386

 -- Sylvestre Ledru <sylvestre@debian.org>  Sun, 15 Feb 2015 22:22:15 +0100

llvm-toolchain-snapshot (1:3.7~svn228821-1) unstable; urgency=medium

  * New snapshot release
  * Bring back polly and remove libcloog-isl-dev & libisl-dev as build deps
    (shipped in the polly source tree)
  * Set the correct conflicts (Closes: #777580, #777581, #777582)
  * lit-lang.diff: Force the call to ld to be in english
    (was failing with a french locale)
  * silent-MCJIIT-tests.diff: enable some tests and silents some other

 -- Sylvestre Ledru <sylvestre@debian.org>  Mon, 09 Feb 2015 22:05:04 +0100

llvm-toolchain-snapshot (1:3.7~svn227076-1) unstable; urgency=medium

  * New snapshot release
  * Switch to version 3.7
  * Standards-Version updated to 3.9.6

 -- Sylvestre Ledru <sylvestre@debian.org>  Mon, 26 Jan 2015 09:23:41 +0100

llvm-toolchain-snapshot (1:3.6~svn224810-1) unstable; urgency=medium

  * New snapshot release
  * Update library filename declaration 3.5 => 3.6 (Closes: #772006)

 -- Sylvestre Ledru <sylvestre@debian.org>  Fri, 05 Dec 2014 17:46:56 -0800

llvm-toolchain-snapshot (1:3.6~svn221998-1~exp1) experimental; urgency=medium

  * Disable ocaml binding. Needs libctypes-ocaml 0.3.3 which is not available
  * libllvm*.a is not longer built
  * Update of the libclang symbols
  * Improve the copyright file. Thanks to Dann Frazier (Closes: #766778)

 -- Sylvestre Ledru <sylvestre@debian.org>  Tue, 04 Nov 2014 14:43:28 +0100

llvm-toolchain-snapshot (1:3.6~svn218612-1) unstable; urgency=medium

  * Fix my screw up. Add .1 to the libclang soname to make
    dpkg-shlibdeps happy
  * Remove useless dependency on doxygen
  * scan-build could not find clang binary (Closes: #758998)
