@@ -1,9 +1,7 @@
 usr/bin/lldb-@LLVM_VERSION@
 usr/lib/llvm-@LLVM_VERSION@/bin/lldb
-usr/lib/llvm-@LLVM_VERSION@/bin/lldb-platform
 usr/lib/llvm-@LLVM_VERSION@/bin/lldb-mi
-usr/lib/llvm-@LLVM_VERSION@/bin/lldb-gdbserver
+usr/lib/llvm-@LLVM_VERSION@/bin/lldb-server
 
-usr/bin/lldb-platform-@LLVM_VERSION@
-usr/bin/lldb-gdbserver-@LLVM_VERSION@
+usr/bin/lldb-server-@LLVM_VERSION@
 usr/bin/lldb-mi-@LLVM_VERSION@
